# notes

./: .gitignore  pyproject.toml
Notes/: settings.py  urls.py
apps/authentication/: urls.py
apps/authentication/templates/authentication/: base.html  login.html  signup.html
apps/authentication/views/: __init__.py  index.py  signout.py  signup.py
apps/authentication/views/forms/: __init__.py  login.py  signup.py
apps/notes/: models.py  urls.py
apps/notes/migrations/: 0001_initial.py  0002_rename_created_on_notes_created_at_and_more.py  0003_notes_uuid.py  0004_alter_notes_uuid.py
apps/notes/models/: notes.py
apps/notes/static/: notes_index.js
apps/notes/templates/: base.html
apps/notes/templates/create_note/: new_note.html
apps/notes/templates/notes_index/: notes_index.html
apps/notes/views/: __init__.py  create_note.py  index.py
apps/notes/views/forms/: __init__.py  new_note.py
notes_app/views/: index.py
